fix margin on mobile version

--- a/src/sass/components/homepage/_contacts-home.scss
+++ b/src/sass/components/homepage/_contacts-home.scss
@@ -110,7 +110,8 @@ address {
   }
 
   &:nth-child(2) .contacts-home__subtitle {
-    
+    margin-right: 54px;
+
     @media screen and (min-width: $tablet) {
       margin-bottom: 8px;
       margin-right: 55px;
